build(github): fix syntax

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,8 +11,8 @@ jobs:
 
       - uses: actions/setup-node@v1
         with:
-          node-version: 14
-        run: |
+          node-version: 12
+      - run: |
           npm install -g yarn
           yarn install
           yarn build
