--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -29,5 +29,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CA_DEVELOPER_PRODUCTIVITY }}'
           projectId: ca-developer-productivity
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          channelId: live
